<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DJHero</string>
    <string name="app_label">DJHero</string>
    <string name="search_hint">Search songs</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="refreshButton">Auto Connect</string>
    <string name="title_activity_song_detail">SongDetailActivity</string>
    <string name="settings_">Settings</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="Song">Songname</string>
    <string name="title_activity_play_song_page">PlaySongPage</string>
    <string name="songName">Song name</string>
    <string name="send_signal">Send Signal</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="label_ip">IP:</string>
    <string name="playsong">Play Song</string>
    <string name="label_port">Port:</string>
    <string name="printsong">Print Song on Debug</string>
    <string name="connect">Connect</string>
    <string name="clear">Clear</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_myip">My IP:</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="refresh_socket">Show Sock.</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_connect_to_de2">ConnectToDE2</string>
    <string name="title_activity_auto_detect">AutoDetect</string>
    <string name="timeLeft">0:00</string>
    <string name="empty"></string>
    <string name="action_dj">DJ Player</string>
    <string name="action_update">Update Song List</string>
    <string name="action_music">Music Player</string>
    <string name="title_activity_djinterface">DJInterface</string>
    <string name="title_activity_play_lists">PlayLists</string>
    <string name="Default_play_list_name">Playlist</string>
    <string name="action_search">Search</string>
    <string name="action_new_playlist">New</string>
    <string name="title_activity_play_list_modify">PlayListModify</string>
    <string name="title_activity_one_play_list">OnePlayList</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete_playlist">Delete</string>
    <string name="title_activity_delete_playlist">DeletePlaylist</string>
    <string name="artistPlaceholder">Artist Name</string>
    <string name="action_playlist">Playlist</string>
    <string name="action_sort">Sort</string>
    <string name="action_speaker">Speak</string>
    <string name="title_activity_search_songs">SearchSongs</string>
    <string name="title_activity_share">Share</string>
    <string name="need_external_storage">Need mounted SD card for this demo app</string>
    <string name="shared_ok">Shared</string>
    <string name="shared_canceled">Canceled</string>
    <string name="sc_app_not_found">SoundCloud App not found or not compatible!</string>
    <string name="sc_app_not_found_message">Do you want to install it now?</string>
    <string name="share">Share</string>
    

</resources>