<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	
	<item android:id="@+id/action_music"
          android:title="@string/action_music"
           android:icon="@drawable/music"
          android:showAsAction="always|withText"/>
	
	<item android:id="@+id/action_dj"
          android:title="@string/action_dj"
          android:icon="@drawable/turntable"
          android:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/action_update"
        android:title="@string/action_update"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/action_playlist"
        android:title="@string/action_playlist"
        android:icon="@drawable/toolbar_playlist"
        android:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    

</menu>