<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	
	<item android:id="@+id/action_music"
          android:title="@string/action_music"
           android:icon="@drawable/music"
          android:showAsAction="always|withText"/>
	
	<item android:id="@+id/action_dj"
          android:title="@string/action_dj"
          android:icon="@drawable/turntable"
          android:showAsAction="always|withText"/>
	
	 <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_menu_search"
          android:showAsAction="always|withText" />
    
    <item
        android:id="@+id/action_update"
        android:title="@string/action_update"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/action_playlist"
        android:title="playlist"
        android:icon="@drawable/toolbar_playlist"
        android:showAsAction="always|withText"/>
    
</menu>